--- a/estrategia_inversion/determinar_momento_inversion/periodicidad/Armar_estrategia_FMTY14.ipynb
+++ b/estrategia_inversion/determinar_momento_inversion/periodicidad/Armar_estrategia_FMTY14.ipynb
@@ -468,9 +468,9 @@
     "\n",
     "Existen varias maneras de presentar los resultados, pero una manera de convencer (para bien y para mal) es utilizar una gráfica.\n",
     "Una gráfica del precio contra el tiempo podemos encontrar en qué periodos el precio es menor o mayor, utilizando esto encontrar qué ocurrió en ese periodo para tener esto en cuenta.\n",
-    "El primer tipo de gráfico que vamos a utilizar es un ```boxplot```.\n",
-    "Una de las ventajas de este tipo de gráfica es que nos muestra los **valores atípicos**; estos son valores que ocurren rara vez y pueden afectar nuestro análisis.\n",
-    "También nos muestra dónde se encuentra cada 25% de nuestros datos.\n",
+    "El primer tipo de gráfico que vamos a utilizar es un ```boxplot``` o gráfica de caja, para entender qué es esto recomiendo leer [Diagrama de caja](https://www.jmp.com/es_co/statistics-knowledge-portal/exploratory-data-analysis/box-plot.html).\n",
+    "Una de las ventajas de este tipo de gráfica es que nos muestra los **valores atípicos**; estos son valores que ocurren rara vez y pueden afectar nuestro análisis, aquí está la [definición de valor atípico](https://es.wikipedia.org/wiki/Valor_at%C3%ADpico).\n",
+    "También nos muestra dónde se encuentran los cuartiles, para saber qué son los cuartiles recomiendo [este artículo](https://economipedia.com/definiciones/cuartil.html).\n",
     "Haciendo a esta gráfica una gran herramienta para el análisis de los precios de una acción del mes.\n",
     "Una ventaja de este método en ```pandas``` es qu podemos utilizar otra columna para agrupar los datos, en este caso queremos analizar qué sucede en los meses individualmente, así que dentro del método utilizamos el código ```by=['Mes']``` para dividir los datos por mes.\n",
     "Y el código ```figsize = (18,9)``` para aumentar el tamaño de la figura."
@@ -2489,6 +2489,10 @@
     "Utilizando estos resultados podemos concluir que es una buena idea seguir esta estrategia de compra para las inversiones pasivas.\n",
     "El problema es que trabajamos con máximos y mínimos, no con cuartiles, ya que el precio máximo o mínimo puede ser valores atípicos, lo que cambiaría el rango y el día completamente.\n",
     "Otra cosa que tenemos que tomar en cuenta es la velocidad a la que cambia el precio de la acción (derivada para los matemáticos), así que puede que sea muy difícil comprar una acción al precio mínimo o al precio máximo, lo que causa que dos estrategias que tienen una diferencia en algunos centavos en su rango en el momento de comprar no sea importante cuál elijamos; en este caso no podemos tomar una decisión por falta de datos.\n",
+    "\n",
+    "Otro problema es que los análisis y predicciones fueron realizados con los mismos datos, así que el modelo se va a ajustar a los datos.\n",
+    "Esto es un problema porque si estos años fueron muy atípicos este modelo no va a ser útil en otros años; o el próximo año sea muy atípico.\n",
+    "Si quieren que hable más sobre los problemas de los modelos y el caos pueden contactarme.\n",
     "\n",
     "Nosotros no encontramos el menor precio, sino un día que nos daba ventajas con respecto a otras estrategias.\n",
     "Vimos que existe ruido que hace que la acción costara menos, para ahorrar más podemos predecir un precio mínimo y dejar la orden de que se compre una acción si baja de cierto precio, pero realizar esto los dejaré para el siguiente **notebook**.\n",
