--- a/estrategia_inversion/determinar_momento_inversion/periodicidad/Armar_estrategia_FMTY14.ipynb
+++ b/estrategia_inversion/determinar_momento_inversion/periodicidad/Armar_estrategia_FMTY14.ipynb
@@ -18,15 +18,7 @@
     "Después de determinar el mejor portafolio para nuestra situación elegimos las acciones y etfs que adecuados y cada cuánto tiempo realizamos nuestras compras, para maximizar las ganancias compramos las acciones en el momento en el periodo que se encuentren más baratas.\n",
     "\n",
     "No me voy a meter mucho en qué es una estrategia de inversión, pero es necesario aclarar muchas cosas.\n",
-    "Un inversionista principiante cuando piensa en una estrategia de inversión a la proporción de un portafolio de inversión, pero una estrategia de inversión es mucho más.\n",
-    "Empezando en elegir el objetivo que tenemos para invertir.\n",
-    "Cuando elegimos la cantidad que vamos a invertir y cómo obtendremos esa cantidad (reduciendo gastos, obteniendo una nueva fuente de ingresos).\n",
-    "En qué sectores vamos a invertir y que mecanismos vamos a utilizar para invertir (acciones, etfs, fondos de inversión).\n",
-    "En qué moneda se va a realizar esta inversión y qué broker o banco vamos a utilizar para realizar esta inversión.\n",
-    "En qué momentos vamos a realizar nuestra inversión, **este trabajo se enfoca en este aspecto**.\n",
-    "Qué haremos en caso de una emergencia y necesitemos una gran cantidad de efectivo rápidamente.\n",
-    "Cómo vamos a transformar en efectivo nuestra inversión al final del periodo.\n",
-    "Y mucho más.\n",
+    "Un inversionista principiante piensa en una estrategia de inversión a la proporción de un portafolio de inversión, pero una estrategia de inversión es muchísimo más, esta requiere trabajo extra pero los beneficios son exponenciales. En el momento en el que eliges tus objetivos de inversión empiezas tu estrategia de inversión, así que estos objetivos deben de ser elegidos cuidadosamente, puedo hablar de cómo obtenerlos y que herramientas nos pueden ayudar a definir estos objetivos en un artículo futuro. La segunda parte de la estrategia de inversión es cuando elegimos la cantidad que vamos a invertir y cómo obtendremos esa cantidad, aquí determinamos si vamos a bajar gastos o buscamos otra fuente de ingresos, esto dependerá mucho de los objetivos que ya te planteaste. En qué sectores vamos a invertir y qué mecanismos vamos a utilizar para invertir (acciones, etfs, fondos de inversión). Otra cosa que es importante que tomes en cuenta es en qué moneda se van a realizar las inversiones, puedes hacerlas en moneda nacional o elegir dólares o una moneda más estable; esto también está conectado con el banco, broker u organismo en el que vas a realizar las inversiones. Luego debes revisar los periodos en los que obtienes dinero y con eso decidir en qué momento vas a realizar una inversión, este artículo se centra en utilizar herramientas para determinar los mejores momentos de invertir. Tomar en cuenta las emergencias es muy importante, existen muchas personas que tenían una muy buena posición y terminaron en la indigencia por contraer una enfermedad que no previeron, aquí no sólo se aplica obtener un seguro de gastos médicos mayores sino tener otras herramientas. Después de invertir, especialmente si invertimos en acciones y etfs, tienes que tener un plan de cómo vas a convertir en efectivo esos activos. Y mucho más :< .\n",
     "\n",
     "El segundo propósito es que la gente aprenda habilidades que se utilizan en muchos proyectos de análisis de datos:\n",
     "\n",
